--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 python-dotenv==1.0.0
 TgCrypto==1.2.5
+pyromod==3.1.6
 pyrogram==2.0.106
 ethon==0.1.5
 redis==5.0.1
 rich==13.7.0
+telethon==1.32.1
